<resources>
    <string name="app_name">Weather</string>
    <string name="city_name">City name</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="_23">23</string>
    <string name="search">Search</string>
    <string name="icon">Icon</string>
    <string name="condition">Condition</string>
    <string name="today_s_weather_forecast">Today\'s weather forecast</string>
    <string name="time">Time</string>
    <string name="_20">20</string>
    <string name="_13">13</string>
</resources>