<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="10dp"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_back">

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/_20"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_below="@id/time_text_view"/>

        <ImageView
            android:id="@+id/condition"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/temperature"
            android:layout_margin="5dp"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/condition" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/condition"
            android:textColor="@color/white"
            android:text="@string/_13"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="3dp"
            android:layout_margin="4dp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>